--- a/index.html
+++ b/index.html
@@ -86,42 +86,44 @@
 
     <ul class="logos-flex-container">
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Assurance.svg" alt="Assurance" />
+        <img class="flex-item-img-small" src="Fonts/Assurance.svg" alt="Assurance" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Bancaire.svg" alt="Bancaire" />
+        <img class="flex-item-img-small" src="Fonts/Bancaire.svg" alt="Bancaire" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/E-commerce.svg" alt="E-commerce" />
+        <img class="flex-item-img-small" src="Fonts/E-commerce.svg" alt="E-commerce" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Energie.svg" alt="Energie" />
+        <img class="flex-item-img-small" src="Fonts/Energie.svg" alt="Energie" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Industrie.svg" alt="Industriel" />
+        <img class="flex-item-img-small" src="Fonts/Industrie.svg" alt="Industriel" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Logistique.svg" alt="Logistique" />
+        <img class="flex-item-img-small" src="Fonts/Logistique.svg" alt="Logistique" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Maritime.svg" alt="Maritime" />
+        <img class="flex-item-img-small" src="Fonts/Maritime.svg" alt="Maritime" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Medical.svg" alt="Medical" />
+        <img class="flex-item-img-small" src="Fonts/Medical.svg" alt="Medical" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Militaire.svg" alt="Militaire" />
+        <img class="flex-item-img-small" src="Fonts/Militaire.svg" alt="Militaire" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Notaires.svg" alt="Notarial" />
+        <img class="flex-item-img-small" src="Fonts/Notaires.svg" alt="Notarial" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Recherche.svg" alt="R&D" />
+        <img class="flex-item-img-small" src="Fonts/Recherche.svg" alt="R&D" />
       </li>
       <li class="logos-flex-item">
-        <img class="flex-item-img" src="Fonts/Formation.svg" alt="Formation" />
+        <img class="flex-item-img-small" src="Fonts/Formation.svg" alt="Formation" />
       </li>
     </ul>
+    <br>
+    <p><small><em>Par discrétion, seul le secteur d'activité des clients est désormais publié ici.</em></small></p>
     <hr>
 
 
@@ -132,6 +134,7 @@
       <a name="Contact"></a>
       <h2>Contact</h2>
       <img src="./Images/Portrait.jpg" class="imgRonde" alt="Contact">
+
       <div id="vcard">
         <h3>Michaël Vacarella</h3>
 
@@ -144,35 +147,43 @@
 
         <p><a href="./CV-Michael-Vacarella-Cyber.pdf"><img src="./svg/paperclip.svg" class="imgSmall"
               alt="CV">Curriculum Vitæ</a></p>
-
-        <br>
-        <img src="./Images/Cybermalveillance.png" class="imgMedium" alt="Label SecNumédu ANSSI"></p>
-        <br>
-        <img src="./Images/secnumedu.png" class="imgMedium" alt="Label SecNumédu ANSSI"></p>
-
       </div>
+
+      <ul class="logos-flex-container">
+        <li class="logos-flex-item">
+          <img class="flex-item-img-big" src="./Images/Cybermalveillance.png" alt="Cybermalveillance" />
+        </li>
+        <li class="logos-flex-item">
+          <img class="flex-item-img-big" src="./Images/secnumedu.png" alt="Label SecNumédu ANSSI" />
+        </li>
+      </ul>
+
+
     </div>
     <hr>
 
 
-      <!-- Assistance
+    <!-- Assistance
     ================================================== -->
     <div class="divDefault">
 
 
       <a name="Assistance"></a>
       <h2>Assistance</h2>
-      <p class="lead">L'Assistance technique vous permet d'appliquer les bonnes pratiques de sécurité, ainsi que de prévenir et gérer les cyberattaques.</p>
+      <p class="lead">L'Assistance technique vous permet d'appliquer les bonnes pratiques de sécurité, ainsi que de
+        prévenir et gérer les cyberattaques.</p>
       <br>
 
 
       <h3>DevSecOps et suivi sécurité</h3>
       <img src="./svg/shield.svg" class="imgSmall" alt="DevSecOps">
       <p class=descr>
-        Mise en place de scans de vulnérabilités et réalisation de tests d’analyses statiques et dynamiques (SAST, DAST et IAST).
+        Mise en place de scans de vulnérabilités et réalisation de tests d’analyses statiques et dynamiques (SAST, DAST
+        et IAST).
         Intégration de la sécurité aux canaux CI/CD et tests de conformité des systèmes d'exploitation.
         Prise en compte des vulnérabilités incluses dans le middleware et les composants tiers.
-        Durcissement des systèmes d'exploitation, clients, serveurs, microservices, firewalls et module matériels de sécurité (HSM).
+        Durcissement des systèmes d'exploitation, clients, serveurs, microservices, firewalls et module matériels de
+        sécurité (HSM).
         Modélisation des menaces (STRIDE) et contribution aux analyses de risque (EBIOS RM).
         Aide à l'intégration des journaux d'événements dans le SIEM de l'organisation.
       </p>
@@ -189,8 +200,6 @@
       </p>
       <br>
 
-      
-
 
       <br><a href="#Contact" class="btn btn-lg btn-secondary">
         Prendre RDV</a><br>
@@ -201,14 +210,15 @@
 
 
 
-        <!-- Audit
+    <!-- Audit
     ================================================== -->
     <div class="divDefault">
 
 
       <a name="Audit"></a>
       <h2>Audit</h2>
-      <p class="lead">Les audits vous permettent de mesurer le niveau de sécurité de vos systèmes d'information et d'obtenir des préconisations concrètes et efficaces.</p>
+      <p class="lead">Les audits vous permettent de mesurer le niveau de sécurité de vos systèmes d'information et
+        d'obtenir des préconisations concrètes et efficaces.</p>
       <br>
 
 
@@ -260,7 +270,7 @@
 
       <h3>Intervention en organisme de formation</h3>
       <img src="./svg/book.svg" class="imgSmall" alt="Contact">
-      <p class=descr>Formations jusqu'au Bac+5, pour des cursus DevOps ou expert en cybersécurité. 
+      <p class=descr>Formations jusqu'au Bac+5, pour des cursus DevOps ou expert en cybersécurité.
         Une attention toute particulière est portée aux syllabus et
         référentiels de formation. Des mises en situations professionnelles concrètes et réalistes permettent
         l'acquisition des compétences opérationnelles attendues sur le marché du travail.</p>
@@ -269,9 +279,11 @@
 
       <h3>Intervention auprès des entreprises</h3>
       <img src="./svg/briefcase.svg" class="imgSmall" alt="Contact">
-      <p class=descr>Les formations sont adaptées aux enjeux de sécurité des projets lors du déploiement continu et prennent en
+      <p class=descr>Les formations sont adaptées aux enjeux de sécurité des projets lors du déploiement continu et
+        prennent en
         compte le cycle de vie de développement logiciel (SDLC).
-        Nous abordons ensemble les risques, les vulnérabilités et les bonnes pratiques de sécurité en nous appuyant sur l'état de l'art de la
+        Nous abordons ensemble les risques, les vulnérabilités et les bonnes pratiques de sécurité en nous appuyant sur
+        l'état de l'art de la
         cybersécurité.
       </p>
       <br>
