--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
       <h3>à propos du site</h3>
       <img src="./svg/globe.svg" class="imgSmall" alt="Mentions">
       <div>
-        <a>©2022-2025 Taisen-Solutions</a><br>
-        <a>Conseil en systèmes et logiciels informatiques</a><br>
+        <a>©2022-2025 Michael Vacarella - Taisen-Solutions</a><br>
+        <a>Entrepreneur individuel - Conseil en systèmes et logiciels informatiques</a><br>
         <a>SIRET 914 624 721 00025</a><br>
         <a>Ce site est hébergé par GitHub: 88 Colin P Kelly Jr St, San Francisco, CA 94107, US</a><br>
         </a>
