--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
     <div class="divDefault">
       <a name="Contact"></a>
       <h2>Contact</h2>
+
       <img src="./Images/Portrait.jpg" class="imgRonde" alt="Contact">
 
       <div id="vcard">
         <h3>Michaël Vacarella</h3>
-
 
         <p><a href="mailto: michael.vacarella@protonmail.com"><img src="./svg/envelope-closed.svg" class="imgSmall"
               alt="ProtonMail">michael.vacarella@protonmail.com</a></p>
@@ -148,6 +148,8 @@
         <p><a href="./CV-Michael-Vacarella-Cyber.pdf"><img src="./svg/paperclip.svg" class="imgSmall"
               alt="CV">Curriculum Vitæ</a></p>
       </div>
+
+      <p class="lead">Je suis à votre écoute pour étudier vos besoins en toute confidentialité et vous apporter une réponse sur-mesure.</p>
 
       <ul class="logos-flex-container">
         <li class="logos-flex-item">
