--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </li>
     </ul>
     <br>
-    <p><small><em>Par discrétion, seul le secteur d'activité des clients est désormais publié ici.</em></small></p>
+    <p><small><em>Par discrétion, seul le secteur d'activité des clients est publié.</em></small></p>
     <hr>
 
 
