--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         Prise en compte des vulnérabilités incluses dans le middleware et les composants tiers.
         Durcissement des systèmes d'exploitation, clients, serveurs, microservices, firewalls et module matériels de
         sécurité (HSM).
-        Modélisation des menaces (STRIDE) et contribution aux analyses de risque (EBIOS RM).
+        Modélisation des menaces (STRIDE), analyse de risques (EBIOS RM) et aide à l'obtention ISO27001.
         Aide à l'intégration des journaux d'événements dans le SIEM de l'organisation.
       </p>
       <br>
@@ -304,8 +304,8 @@
       <h3>à propos du site</h3>
       <img src="./svg/globe.svg" class="imgSmall" alt="Mentions">
       <div>
-        <a>©2022-2025 Michael Vacarella - Taisen-Solutions</a><br>
-        <a>Entrepreneur individuel - Conseil en systèmes et logiciels informatiques</a><br>
+        <a>©2022 Michael Vacarella - Entrepreneur individuel</a><br>
+        <a>Taisen-Solutions - Conseil en systèmes et logiciels informatiques</a><br>
         <a>SIRET 914 624 721 00025</a><br>
         <a>Ce site est hébergé par GitHub: 88 Colin P Kelly Jr St, San Francisco, CA 94107, US</a><br>
         </a>
