--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   default-src 'self';
   img-src data 'self';
   object-src 'none';
-  script-src 'self' 'unsafe-inline'; 
+  script-src 'self'; 
   style-src 'self';
   upgrade-insecure-requests;">
 
@@ -318,7 +318,7 @@
 
 
   <!--dynamic code-->
-  <script src="./minimal.js"></script>
+  <script src="minimal.js"></script>
 
 </body>
 
