--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   default-src 'self';
   img-src data 'self';
   object-src 'none';
-  script-src 'self'; 
+  script-src 'self' https://taisen.fr; 
   style-src 'self';
   upgrade-insecure-requests;">
 
