--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   default-src 'self';
   img-src data 'self';
   object-src 'none';
-  script-src 'self' 'unsafe-inline'; 
+  script-src 'self' https://taisen.fr; 
   style-src 'self';
   upgrade-insecure-requests;">
 
@@ -71,9 +71,9 @@
       <hr>
       <br><br>
       <p>
-        <a href="#Assistance" onclick="toggleSection('assistance')" class="btn btn-lg btn-secondary">Assistance</a><br><br>
-        <a href="#Audit" onclick="toggleSection('audit')" class="btn btn-lg btn-secondary">Audit</a><br><br>
-        <a href="#Formation" onclick="toggleSection('formation')" class="btn btn-lg btn-secondary">Formation</a><br>
+        <a href="#Assistance" class="btn btn-lg btn-secondary">Assistance</a><br><br>
+        <a href="#Audit" class="btn btn-lg btn-secondary">Audit</a><br><br>
+        <a href="#Formation" class="btn btn-lg btn-secondary">Formation</a><br>
       </p>
       <br>
     </main>
