--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
       <hr>
       <br><br>
       <p>
-        <a href="#Assistance" class="btn btn-lg btn-secondary">Assistance</a><br><br>
-        <a href="#Audit" class="btn btn-lg btn-secondary">Audit</a><br><br>
-        <a href="#Formation" class="btn btn-lg btn-secondary">Formation</a><br>
+        <a href="#Assistance" id="btn-assistance" class="btn btn-lg btn-secondary">Assistance</a><br><br>
+        <a href="#Audit" id="btn-audit" class="btn btn-lg btn-secondary">Audit</a><br><br>
+        <a href="#Formation" id="btn-formation" class="btn btn-lg btn-secondary">Formation</a><br>
       </p>
       <br>
     </main>
