Update Suivi Securite

--- a/index.html
+++ b/index.html
@@ -180,13 +180,11 @@
       <h3>DevSecOps et suivi sécurité</h3>
       <img src="./svg/shield.svg" class="imgSmall" alt="DevSecOps">
       <p class=descr>
-        Mise en place de scans de vulnérabilités et réalisation de tests d’analyses statiques et dynamiques (SAST, DAST
-        et IAST).
+        Modélisation des menaces (STRIDE), analyse de risques (EBIOS RM), aide à la gouvernance et préparation ISO27001.
+        Durcissement des Architectures, systèmes d'exploitation, instances Cloud, microservices, firewalls et modules matériels de sécurité (HSM).
+        Mise en place de scans de vulnérabilités et réalisation de tests d’analyses statiques et dynamiques (SAST, DAST et IAST).
         Intégration de la sécurité aux canaux CI/CD et tests de conformité des systèmes d'exploitation.
         Prise en compte des vulnérabilités incluses dans le middleware et les composants tiers.
-        Durcissement des systèmes d'exploitation, clients, serveurs, microservices, firewalls et module matériels de
-        sécurité (HSM).
-        Modélisation des menaces (STRIDE), analyse de risques (EBIOS RM) et aide à l'obtention ISO27001.
         Aide à l'intégration des journaux d'événements dans le SIEM de l'organisation.
       </p>
       <br>
