--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <img src="./svg/shield.svg" class="imgSmall" alt="DevSecOps">
       <p class=descr>
         Modélisation des menaces (STRIDE), analyse de risques (EBIOS RM), aide à la gouvernance et préparation ISO27001.
-        Durcissement des Architectures, systèmes d'exploitation, instances Cloud, microservices, firewalls et modules matériels de sécurité (HSM).
+        Durcissement des architectures, systèmes d'exploitation, instances Cloud, microservices, firewalls et modules matériels de sécurité (HSM).
         Mise en place de scans de vulnérabilités et réalisation de tests d’analyses statiques et dynamiques (SAST, DAST et IAST).
         Intégration de la sécurité aux canaux CI/CD. Prise en compte des vulnérabilités incluses dans le middleware et les composants tiers.
         Aide à l'intégration des journaux d'événements dans le SIEM de l'organisation.
