--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 
   <meta property="og:title" content="TAISEN Solutions " />
-  <meta name="description" content="Protégez vos applications et votre infrastructure IT.">
+  <meta name="description" content="Pour votre cybersécurité, choisissez un expert indépendant.">
   <meta property="og:image" content="https://taisen.fr/android-chrome-512x512.png" />
   <meta property="og:url" content="https://taisen.fr/" />
-  <meta property="og:description" content="Protégez vos applications et votre infrastructure IT." />
+  <meta property="og:description" content="Pour votre cybersécurité, choisissez un expert indépendant." />
   <meta property="og:site_name" content="Taisen-Solutions" />
   <meta property="og:type" content="article" />
   <meta name="author" content="Michael Vacarella">
@@ -67,7 +67,7 @@
       <img src="./Images/Taisen.png" class="logotsn" alt="Contact">
       <br><br>
       <hr>
-      <h1 class="cover-heading">Protégez vos applications et votre infrastructure IT.</h1>
+      <h1 class="cover-heading">Pour votre cybersécurité, choisissez un expert indépendant.</h1>
       <hr>
       <br><br>
       <p>
