--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
       <h3>Assistance post-incident</h3>
       <img src="./svg/magnifying-glass.svg" class="imgSmall" alt="DevSecOps">
       <p class=descr>
+        Détection des menaces sans-fil (keyloggers, AP non autorisés, matériels-espion).
         Aide technique pour la réponse à incident et l'investigation numérique (forensic).
         Extraction de souches (artefacts) pour les victimes et les services d'enquêteurs.
         Recherche d'indicateurs de compromissions (IoCs) et d'éventuelles fuites de données (OSINT).
