--- a/index.html
+++ b/index.html
@@ -178,25 +178,25 @@
 
       <h3>DevSecOps et suivi sécurité</h3>
       <img src="./svg/shield.svg" class="imgSmall" alt="DevSecOps">
-      <p class=descr>
-        Modélisation des menaces (STRIDE), analyse de risques (EBIOS RM), aide à la gouvernance et préparation ISO27001.
-        Durcissement des architectures, systèmes d'exploitation, instances Cloud, microservices, firewalls et modules matériels de sécurité (HSM).
-        Mise en place de scans de vulnérabilités et réalisation de tests d’analyses statiques et dynamiques (SAST, DAST et IAST).
-        Intégration de la sécurité aux canaux CI/CD. Prise en compte des vulnérabilités incluses dans le middleware et les composants tiers.
-        Aide à l'intégration des journaux d'événements dans le SIEM de l'organisation.
-      </p>
+      <ul class="descr">
+        <li>Modélisation des menaces (STRIDE) et analyse de risques (EBIOS RM)</li> 
+        <li>Aide à la gouvernance et préparation à la certification ISO27001.</li>
+        <li>Durcissement des architectures, systèmes d'exploitation, instances Cloud, microservices, firewalls et modules matériels de sécurité (HSM).</li>
+        <li>Mise en place de scans de vulnérabilités et réalisation de tests d’analyses statiques et dynamiques (SAST, DAST et IAST).</li>
+        <li>Intégration de la sécurité aux canaux CI/CD. Prise en compte des vulnérabilités incluses dans le middleware et les composants tiers.</li>
+        <li>Aide à l'intégration des journaux d'événements dans le SIEM de l'organisation.</li>
+      </ul>
       <br>
-
-
+      
       <h3>Assistance post-incident</h3>
       <img src="./svg/magnifying-glass.svg" class="imgSmall" alt="DevSecOps">
-      <p class=descr>
-        Détection des menaces sans-fil (keyloggers, AP non autorisés, matériels-espion).
-        Aide technique pour la réponse à incident et l'investigation numérique (forensic).
-        Extraction de souches (artefacts) pour les victimes et les services d'enquêteurs.
-        Recherche d'indicateurs de compromissions (IoCs) et d'éventuelles fuites de données (OSINT).
-        Aide à la reconstruction d'un système d'information sain et à l'état de l'art des bonnes pratiques de sécurité.
-      </p>
+      <ul class="descr">
+        <li>Détection des menaces sans-fil (keyloggers, AP non autorisés, matériels-espions).</li>
+        <li>Aide technique pour la réponse à incident et l'investigation numérique (forensic).</li>
+        <li>Extraction de souches (artefacts) pour les victimes et les services d'enquêteurs.</li>
+        <li>Recherche d'indicateurs de compromissions (IoCs) et d'éventuelles fuites de données (OSINT).</li>
+        <li>Aide à la reconstruction d'un système d'information sain et à l'état de l'art des bonnes pratiques de sécurité.</li>
+      </ul>
       <br>
 
 
