--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
               alt="CV">Curriculum Vitæ</a></p>
       </div>
 
+
+  <div class="social-logos">
+    <nav class="nav nav-masthead justify-content-center">
+    <a class="nav-link" href="https://github.com/Aif4thah"><img src="./Images/github.svg" class="imgSmall-menu"
+      alt="git"></a>
+    <a class="nav-link" href="https://www.linkedin.com/in/mvacarella"><img src="./Images/in.png"
+      class="imgSmall-menu" alt="ln"></a>
+    </nav>
+  </div>
+
       <ul class="logos-flex-container">
         <li class="logos-flex-item">
           <img class="flex-item-img-big" src="./Images/Cybermalveillance.png" alt="Cybermalveillance" />
