--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <img src="./Images/Taisen.png" class="logotsn" alt="Contact">
       <br><br>
       <hr>
-      <h1 class="cover-heading">Pour votre cybersécurité, choisissez un expert indépendant.</h1>
+      <h1 class="cover-heading">Une réponse sur mesure à vos besoins en cybersécurité</h1>
       <hr>
       <br><br>
       <p>
@@ -133,7 +133,7 @@
     <div class="divDefault">
       <a name="Contact"></a>
       <h2>Contact</h2>
-      <p class="lead">“Je suis à votre écoute pour étudier vos besoins en toute confidentialité et y apporter une solution sur-mesure.”</p>
+      <p class="lead">“Je suis à votre écoute pour étudier vos besoins en toute confidentialité.”</p>
 
       <img src="./Images/Portrait.jpg" class="imgRonde" alt="Contact">
 
@@ -201,10 +201,10 @@
       <h3>Assistance post-incident</h3>
       <img src="./svg/magnifying-glass.svg" class="imgSmall" alt="DevSecOps">
       <ul class="descr">
-        <li>Détection des menaces sans-fil : keyloggers, AP non autorisés, matériels-espions.</li>
         <li>Aide technique pour la réponse à incident et l'investigation numérique (forensic).</li>
         <li>Extraction de souches (artefacts) pour les victimes et les services d'enquêteurs.</li>
-        <li>Recherche d'indicateurs de compromissions (IoCs) et d'éventuelles fuites de données (OSINT).</li>
+        <li>Détection des menaces sans-fil : recherche de matériels-espions et points d'accès malveillants.</li>
+        <li>Recherche d'indicateurs de compromission (IoCs) et d'éventuelles fuites de données (OSINT).</li>
         <li>Aide à la reconstruction d'un système d'information sain et à l'état de l'art des bonnes pratiques de sécurité.</li>
       </ul>
       <br>
