--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <ul class="descr">
         <li>Aide technique pour la réponse à incident et l'investigation numérique (forensic).</li>
         <li>Extraction de souches (artefacts) pour les victimes et les services d'enquêteurs.</li>
-        <li>Détection des menaces sans-fil : recherche de matériels-espions et points d'accès malveillants.</li>
+        <li>Recherche de matériels-espions ou malveillants (revues et analyses de spectre).</li>
         <li>Recherche d'indicateurs de compromission (IoCs) et d'éventuelles fuites de données (OSINT).</li>
         <li>Aide à la reconstruction d'un système d'information sain et à l'état de l'art des bonnes pratiques de sécurité.</li>
       </ul>
