--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <br>
 
 
-      <h3>Tests d’intrusion (Pentest)</h3>
+      <h3>Test d’intrusion (Pentest)</h3>
       <img src="./svg/bug.svg" class="imgSmall" alt="Contact">
       <p class=descr>Le principe du test d’intrusion est de découvrir des vulnérabilités sur l'application auditée et
         de vérifier leur exploitabilité et leur impact, dans les conditions réelles d’une attaque.
