--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="manifest" href="/site.webmanifest">
 
 
-  <title>Taisen Solutions</title>
+  <title>Taisen Solutions | Expertise Cybersécurité, Pentest & DevSecOps</title>
 
 
   <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
   <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
       <div class="inner">
-        <h3 class="masthead-brand"><a class="nav-link" href="#">Taisen Solutions</h3>
+        <h3 class="masthead-brand"><a class="nav-link" href="#">Taisen Solutions</a></h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="#Contact"><img src="./svg/envelope-closed.svg" class="imgSmall-menu"
               alt="contact"></a>
@@ -67,11 +67,11 @@
       <img src="./Images/Taisen.png" class="logotsn" alt="Contact">
       <br><br>
       <hr>
-      <h1 class="cover-heading">Une réponse sur mesure à vos besoins en cybersécurité</h1>
+      <h1 class="cover-heading">Sécurisez votre code, vos infrastructures et vos équipes.</h1>
       <hr>
       <br><br>
       <p>
-        <a href="#Assistance" id="btn-assistance" class="btn btn-lg btn-secondary">Assistance</a><br><br>
+        <a href="#Accompagnement" id="btn-accompagnement" class="btn btn-lg btn-secondary">DevSecOps</a><br><br>
         <a href="#Audit" id="btn-audit" class="btn btn-lg btn-secondary">Audit</a><br><br>
         <a href="#Formation" id="btn-formation" class="btn btn-lg btn-secondary">Formation</a><br>
       </p>
@@ -133,7 +133,7 @@
     <div class="divDefault">
       <a name="Contact"></a>
       <h2>Contact</h2>
-      <p class="lead">“Je suis à votre écoute pour étudier vos besoins en toute confidentialité.”</p>
+      <p class="lead">Un interlocuteur unique, une réactivité immédiate et une expertise technique sans intermédiaire.</p>
 
       <img src="./Images/Portrait.jpg" class="imgRonde" alt="Contact">
 
@@ -168,21 +168,17 @@
           <img class="flex-item-img-big" src="./Images/secnumedu.png" alt="Label SecNumédu ANSSI" />
         </li>
       </ul>
-
-
     </div>
-    <hr>
 
 
-    <!-- Assistance
+    <!-- Accompagnement
     ================================================== -->
-    <div id="assistance" class="section">
+    <div id="accompagnement" class="section">
     <div class="divDefault">
 
-      <a name="Assistance"></a>
-      <h2>Assistance</h2>
-      <p class="lead">L'Assistance technique vous permet d'appliquer les bonnes pratiques de sécurité, ainsi que de
-        prévenir et gérer les cyberattaques.</p>
+      <a name="Accompagnement"></a>
+      <h2>Accompagnement</h2>
+      <p class="lead">L'Accompagnement DevSecOps vous permet d'appliquer les bonnes pratiques de sécurité pour prévenir et gérer les cyberattaques.</p>
       <br>
 
 
@@ -200,6 +196,8 @@
       
       <h3>Assistance post-incident</h3>
       <img src="./svg/magnifying-glass.svg" class="imgSmall" alt="DevSecOps">
+      <p class=descr>Ce service est exclusivement réservé aux clients ayant déjà fait l'objet d'un audit ou d'un accompagnement.
+      </p>
       <ul class="descr">
         <li>Aide technique pour la réponse à incident et l'investigation numérique (forensic).</li>
         <li>Extraction de souches (artefacts) pour les victimes et les services d'enquêteurs.</li>
@@ -227,8 +225,7 @@
 
       <a name="Audit"></a>
       <h2>Audit</h2>
-      <p class="lead">Les audits vous permettent de mesurer le niveau de sécurité de vos systèmes d'information et
-        d'obtenir des préconisations concrètes et efficaces.</p>
+      <p class="lead">Les audits vous permettent de mesurer le niveau de sécurité de votre SI pour obtenir des préconisations concrètes et efficaces.</p>
       <br>
 
 
@@ -284,7 +281,7 @@
       <img src="./svg/book.svg" class="imgSmall" alt="Contact">
       <p class=descr>Formations jusqu'au Bac+5, pour des cursus DevOps ou expert en cybersécurité.
         Une attention toute particulière est portée aux syllabus et
-        référentiels de formation. Des mises en situations professionnelles concrètes et réalistes permettent
+        référentiels de formation. Des mises en situation professionnelles concrètes et réalistes permettent
         l'acquisition des compétences opérationnelles attendues sur le marché du travail.</p>
       <br>
 
@@ -311,13 +308,13 @@
     <!-- Mentions
     ================================================== -->
     <footer class="mastfoot mt-auto">
-      <h3>à propos du site</h3>
+      <h3>À propos du site</h3>
       <img src="./svg/globe.svg" class="imgSmall" alt="Mentions">
       <div>
-        <a>©2022 Michael Vacarella - Entrepreneur individuel</a><br>
+        <a>©2022 - 2026 Michael Vacarella - Entrepreneur individuel</a><br>
         <a>Taisen-Solutions - Conseil en systèmes et logiciels informatiques</a><br>
         <a>SIRET 914 624 721 00025</a><br>
-        <a>Ce site est hébergé par GitHub: 88 Colin P Kelly Jr St, San Francisco, CA 94107, US</a><br>
+        <a>Ce site est hébergé par GitHub : 88 Colin P Kelly Jr St, San Francisco, CA 94107, US</a><br>
         </a>
       </div>
     </footer>
